# UserService

./: .gitignore  Dockerfile  README.md  alembic.ini  config.json  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2026_07_20_2212-9ebadfc2a6db_created_user_table.py  2026_07_22_2004-98cd58c3a2cd_added_table_relation.py
resources/: startup.sh
src/: __init__.py  base_repository.py  config.py  database.py  enums.py  exceptions.py  jwt_validator.py  logger.py  main.py  rabbit.py  schemas.py
src/auth/: constants.py  schemas.py  service.py
src/invitation/: repository.py
src/relation/: dependencies.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
src/scripts/: create_config.py  create_database.py  get_workers_amount.py
src/user/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
user_service/: README.md
