[project]
name = "userservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "faststream[cli,rabbit]>=0.7.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".venv",
]

[tool.ruff.lint]
preview = true
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "E221",
    "E271",
    "UP047",
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]